# pgplot

./: .cvsignore  .gitignore  Makefile.am  README.bima  README.carma  aaaread.me  aaaread.me2  autofix_eps.pl.in  autogen.sh  automakedoc.in  configure.ac  copyright.notice  drivers.list  drivers.list.in  fix_eps.pl  grexec.awk  makehtml.in  makemake  maketex.in  pgplot-config.csh.in  pgplot-config.sh.in  readme_fix_eps.txt
applications/: Makefile.am
cpg/: .gitignore  Makefile.am  pgbind.c
drivers/: Makefile.am  bcdriv.f  cadriv.f  ccdriv.f  figdisp_comm.c  fix64bit.csh  gcdriv.f  gidriv.f  gldriv.f  gvdriv.f  hjdriv.f  ladriv.f  ljdriv.f  lndriv.f  lvdriv.f  pgdriv.f  pgxwin.c  pgxwin.h  pgxwin_server.c  pndriv.c  ppdriv.f  psdriv.f  todriv.f  ttdriv.f  txdriv.f  vadriv.f  vbdriv.f  wddriv.f  xwdriv.c  zedriv.f
drivers/xmotif/: XmPgplot.c  XmPgplot.h  XmPgplotP.h  pgmdemo.c
drivers/xtk/: pgtkdemo.c  pgtkdemo.tcl  tkpgplot.c  tkpgplot.h
examples/: .gitignore  Makefile.am  pgdemo17.f  pgdemo3.f
fonts/: .gitignore  Makefile.am  pgpack.f
pgdispd/: Makefile.am
src/: Makefile.am  grchr0.f  grgfil.f  grimg3.f  gropen.f  grpocl.f  grslct.f  grtext.f  pgaxis.f  pgbeg.f  pgcl.f  pgcn01.f  pgcp.f  pgncur.f  pgptxt.f  pgqinf.f
sys/: .gitignore  grfileio.c  grflun.f  grgetc.c  grgmem.c  grlgtr.f  groptx.f  grtermio.c
sys_aix/: aaaread.me  xlf_cc.conf
sys_alliant/: fortran_cc.conf
sys_bsd/: g77_gcc.conf
sys_convex/: fc_cc.conf
sys_cray/: aaaread.me  cf77_cc.conf
sys_darwin/: aaaread.me  g77_gcc.conf  gfortran_gcc.conf  gfortran_gcc_old.conf  xlf_xlc.conf
sys_dos/: makefile.dos  makefile.koyama
sys_epix2/: f77_cc.conf
sys_freebsd/: f77_cc.conf
sys_fujitsu/: uxpm_frt_cc.conf  uxpv_frt_cc.conf
sys_hp/: aaaread.me  fort77_c89.conf  fort77_gcc.conf
sys_irix/: aaaread.me
sys_linux/: aaaread.me  absoft_gcc.conf  f77_gcc.conf  g77_elf.conf  g77_gcc.conf  g77_gcc_64.conf  g95_gcc.conf  gfortran_gcc.conf  ifc_icc.conf  ifort_icc.conf
sys_macosx/: aaaread.me  gfortran_gcc_32.conf  gfortran_gcc_64.conf
sys_next/: aaaread.me  af77_cc.conf  f2c_cc.conf  g77_cc.conf  gf77_cc.conf
sys_osf1/: aaaread.me  f77_cc.conf  f77_cc_shared.conf
sys_sol2/: aaaread.me  f77_cc.conf  f77_gcc.conf  f90_cc.conf  g77_gcc.conf
sys_sun4/: f77_acc.conf  f77_cc.conf  f77_gcc.conf
sys_ultrix/: f77_cc.conf
sys_vms/: compile.com  grgcom.f  grtermio.f
sys_win/: aaaread.me  grexec.f  w9driv.f
