# Process this file with 'automake' to generate 'Makefile.in'

EXTRA_DIST = \
 aaaread.me document.f gmfplot.f pgattrib.inc \
 \
 curvefit/curvefit.f curvefit/curvefit.doc \
 \
 plot10/plot10.f \
 \
 plotpg/about_fi_plt.in plotpg/fi.plt plotpg/fi_plt.in \
 plotpg/plotpg.hlp plotpg/plotpg.unix plotpg/plotpg.vms \
 plotpg/sample.dat
