# Process this file with 'automake' to generate 'Makefile.in'
#
# Include all of the disabled drivers, just in case someone wants
# to patch this package to use one.

disabled_files = \
 bcdriv.f cadriv.f ccdriv.f cgdriv.c cwdriv.f \
 epdriv.f exdriv.f gcdriv.f gldriv.f godriv.f \
 gvdriv.f hgdriv.f hidriv.f hjdriv.f hpdriv.f \
 ladriv.f lhdriv.f ljdriv.f lndriv.f lsdriv.f \
 lvdriv.f lxdriv.f mfdriv.f nedriv.f pgdriv.f \
 pndriv.c ppdriv.f psdriv.f pxdriv.f qmdriv.f \
 rvdriv.c tfdriv.f tkdriv.c todriv.f txdriv.f \
 vadriv.f vbdriv.f vtdriv.f vtdriv-vms.f wddriv.f \
 wsdriv.f x2driv.c xadriv.c xedriv.f xmdriv.c \
 zedriv.f \
 \
 commands.h defines.h figdisp_comm.c nexsup.c \
 nexsup.m pgxwin.c pgxwin.h \
 \
 xathena/XaPgplot.c xathena/XaPgplot.h \
 xathena/XaPgplotP.h xathena/pgawdemo.c \
 \
 xmotif/XmPgplot.c xmotif/XmPgplot.h \
 xmotif/XmPgplotP.h xmotif/pgmdemo.c \
 \
 xtk/pgtkdemo.c xtk/pgtkdemo.tcl \
 xtk/rvpgplot.h xtk/tkpgplot.c \
 xtk/tkpgplot.h

EXTRA_DIST = \
 aaaread.me $(disabled_files) 

