# Process this file with 'automake' to generate 'Makefile.in'

EXTRA_DIST = aaaread.me check

noinst_PROGRAMS = \
 pgdemo1 pgdemo2 pgdemo3 pgdemo4 pgdemo5 pgdemo6 \
 pgdemo7 pgdemo8 pgdemo9 pgdemo10 pgdemo11 pgdemo12 \
 pgdemo13 pgdemo14 pgdemo15 pgdemo16 pgdemo17

LDADD =  $(top_builddir)/libpgplot.la

pgdemo1_SOURCES = pgdemo1.f
pgdemo2_SOURCES = pgdemo2.f
pgdemo3_SOURCES = pgdemo3.f
pgdemo4_SOURCES = pgdemo4.f
pgdemo5_SOURCES = pgdemo5.f
pgdemo6_SOURCES = pgdemo6.f
pgdemo7_SOURCES = pgdemo7.f
pgdemo8_SOURCES = pgdemo8.f
pgdemo9_SOURCES = pgdemo9.f
pgdemo10_SOURCES = pgdemo10.f
pgdemo11_SOURCES = pgdemo11.f
pgdemo12_SOURCES = pgdemo12.f
pgdemo13_SOURCES = pgdemo13.f
pgdemo14_SOURCES = pgdemo14.f
pgdemo15_SOURCES = pgdemo15.f
pgdemo16_SOURCES = pgdemo16.f
pgdemo17_SOURCES = pgdemo17.f
