# Process this file with 'automake' to generate 'Makefile.in'

EXTRA_DIST = aaaread.me

libexec_PROGRAMS = pgdisp

pgdisp_CFLAGS = -DPGDISP

pgdisp_SOURCES = \
 cleanup.c exposelgwin.c figcurs.c getcolors.c getdata.c \
 getvisuals.c handlexevent.c initlgluts.c initlgwin.c \
 initlock.c initwmattr.c mainloop.c ntoh.c pgdisp.c \
 proccom.c resdb.c resizelgwin.c returnbuf.c updatelgtitle.c \
 waitevent.c \
 commands.h figdisp.h globals.h messages.h
